==> edgeimpulse/firmware-nordic-nrf91x1/src/sensors/ei_microphone.cpp <==
#include <zephyr/logging/log.h>
#include <zephyr/kernel.h>
#include <zephyr/audio/dmic.h>
#include "edge-impulse-sdk/porting/ei_classifier_porting.h"
#include "edge-impulse-sdk/dsp/numpy.hpp"
#include "firmware-sdk/ei_device_memory.h"
#include "firmware-sdk/ei_device_info_lib.h"
#include "firmware-sdk/sensor-aq/sensor_aq_none.h"
#include "ei_microphone.h"
#define AUDIO_FREQ          16000
#define BYTES_PER_SAMPLE    sizeof(int16_t)
#define SAMPLE_BIT_WIDTH    (BYTES_PER_SAMPLE * 8)
#define BLOCK_COUNT         4
#define BLOCK_LENGTH_MS     100
#define BLOCKS_PER_SECOND   (1000 / BLOCK_LENGTH_MS)
#define READ_TIMEOUT        150 // Milliseconds to wait for a block to be read
#define BLOCK_SIZE(_sample_rate, _number_of_channels) \
	(BYTES_PER_SAMPLE * (_sample_rate / BLOCKS_PER_SECOND) * _number_of_channels)
#define MAX_BLOCK_SIZE   BLOCK_SIZE(AUDIO_FREQ, 1)

static bool create_header(sensor_aq_payload_info *payload)
{
    int ret;
    sensor_aq_init_none_context(&ei_mic_signing_ctx);

    ret = sensor_aq_init(&ei_mic_ctx, payload, NULL, true);

    if (ret != AQ_OK) {
        LOG_ERR("sensor_aq_init failed (%d)", ret);
        return false;
    }

    // then we're gonna find the last byte that is not 0x00 in the CBOR buffer.
    // That should give us the whole header
    size_t end_of_header_ix = 0;
    for (size_t ix = ei_mic_ctx.cbor_buffer.len - 1; ix >= 0; ix--) {
        if (((uint8_t*)ei_mic_ctx.cbor_buffer.ptr)[ix] != 0x0) {
            end_of_header_ix = ix;
            break;
        }
    }

    if (end_of_header_ix == 0) {
        LOG_ERR("Failed to find end of header");
        return false;
    }

    int ref_size = insert_ref(((char*)ei_mic_ctx.cbor_buffer.ptr + end_of_header_ix), end_of_header_ix);

    end_of_header_ix += ref_size;

    // Write to blockdevice
    ret = memory->write_sample_data((uint8_t*)ei_mic_ctx.cbor_buffer.ptr, 0, end_of_header_ix);
    if ((size_t)ret != end_of_header_ix) {
        LOG_ERR("Failed to write to header blockdevice (%d)", ret);
        return false;
    }

    headerOffset = end_of_header_ix;

    return true;
}

bool ei_microphone_sample_start(void)
{
    EiDeviceInfo* dev = EiDeviceInfo::get_device();
    int ret;
    void *buffer;
    uint32_t size;
    bool first_block_discarded = false;

    ei_printf("Sampling settings:\n");
    ei_printf("\tInterval: %.5f ms.\n", dev->get_sample_interval_ms());
    ei_printf("\tLength: %u ms.\n", dev->get_sample_length_ms());
    ei_printf("\tName: %s\n", dev->get_sample_label().c_str());
    ei_printf("\tHMAC Key: %s\n", dev->get_sample_hmac_key().c_str());
    ei_printf("\tFile name: %s\n", dev->get_sample_label().c_str());

    sensor_aq_payload_info payload = {
        dev->get_device_id().c_str(),
        dev->get_device_type().c_str(),
        dev->get_sample_interval_ms(),
        { { "audio", "wav" } }
    };

    /* Audio sample rate sanity check */
    if ((uint32_t)(1000.f / dev->get_sample_interval_ms()) != AUDIO_FREQ) {
        LOG_ERR("Only 16 kHz sampling rate is supported!");
        return false;
    }

    required_samples = (uint32_t)((dev->get_sample_length_ms()) / dev->get_sample_interval_ms());

    /* Round to even number of samples for word align flash write */
    if(required_samples & 1) {
        required_samples++;
    }

    collected_samples = 0;

    if(required_samples * sizeof(microphone_sample_t) > memory->get_available_sample_bytes()) {
        LOG_ERR("Sample length is too long. Maximum allowed is %u ms at 16000 Hz.",
            ((memory->get_available_sample_bytes() / (16000 * sizeof(microphone_sample_t))) * 1000));
        return false;
    }

    dev->set_state(eiStateErasingFlash);

    // Minimum delay of 2000 ms for daemon
    uint32_t delay_time_ms = ((required_samples * sizeof(microphone_sample_t) / memory->block_size) + 1) * memory->block_erase_time;
    ei_printf("Starting in %u ms... (or until all flash was erased)\n", delay_time_ms < 2000 ? 2000 : delay_time_ms);

    if(memory->erase_sample_data(0, required_samples * sizeof(microphone_sample_t)) != (required_samples * sizeof(microphone_sample_t))) {
        return false;
    }

    // if erasing took less than 2 seconds, wait additional time
    if(delay_time_ms < 2000) {
        ei_sleep(2000 - delay_time_ms);
    }

    if (create_header(&payload) == false) {
        return false;
    }

	struct pcm_stream_cfg stream = {
		.pcm_width = SAMPLE_BIT_WIDTH,
		.mem_slab  = &rx_mem_slab,
	};
	struct dmic_cfg cfg = {
		.io = {
			/* These fields can be used to limit the PDM clock
			 * configurations that the driver is allowed to use
			 * to those supported by the microphone.
			 */
			.min_pdm_clk_freq = 1000000,
			.max_pdm_clk_freq = 3500000,
			.min_pdm_clk_dc   = 40,
			.max_pdm_clk_dc   = 60,
		},
		.streams = &stream,
		.channel = {
			.req_num_streams = 1,
		},
	};

	cfg.channel.req_num_chan = 1;
	cfg.channel.req_chan_map_lo = dmic_build_channel_map(0, 0, PDM_CHAN_RIGHT);
	cfg.streams[0].pcm_rate = AUDIO_FREQ;
	cfg.streams[0].block_size = BLOCK_SIZE(cfg.streams[0].pcm_rate, cfg.channel.req_num_chan);

	ret = dmic_configure(mic_dev, &cfg);
	if (ret) {
		LOG_ERR("DMIC configure error (%d)", ret);
        return false;
	}

    ei_printf("Sampling...\n");

    dev->set_state(eiStateSampling);

    ret = dmic_trigger(mic_dev, DMIC_TRIGGER_START);
    if (ret < 0) {
        LOG_ERR("START trigger failed: %d", ret);
        return false;
    }

    dev->set_state(eiStateSampling);

    while(collected_samples < required_samples) {
        ret = dmic_read(mic_dev, 0, &buffer, &size, READ_TIMEOUT);
        if (ret < 0) {
            LOG_WRN("DMIC read failed: %d", ret);
			continue;
		}

        LOG_DBG("%d - got buffer %p of %u bytes", collected_samples, buffer, size);

        if(first_block_discarded == false) {
            first_block_discarded = true;
            k_mem_slab_free(&rx_mem_slab, buffer);
            continue;
        }

        memory->write_sample_data((uint8_t*)buffer, headerOffset + collected_samples * sizeof(microphone_sample_t), size);
        LOG_DBG("Wrote %u bytes to flash", size);
        k_mem_slab_free(&rx_mem_slab, buffer);
        LOG_DBG("Freed buffer");
        collected_samples += size / sizeof(microphone_sample_t);
        k_yield();
    }

	ret = dmic_trigger(mic_dev, DMIC_TRIGGER_STOP);
	if (ret < 0) {
		LOG_ERR("STOP trigger failed: %d", ret);
		return false;
	}

    ei_printf("Done sampling, total bytes collected: %u\n", collected_samples * sizeof(microphone_sample_t));
    ei_printf("[1/1] Uploading file to Edge Impulse...\n");
    ei_printf("Not uploading file, not connected to WiFi. Used buffer, from=0, to=%u.\n", collected_samples * sizeof(microphone_sample_t) + headerOffset);
    ei_printf("OK\n");

    return true;
}

bool ei_microphone_inference_start(uint32_t n_samples, float interval_ms)
{
    int ret;

    k_mutex_lock(&inference_mutex, K_FOREVER);
    inference.buffers[0] = (microphone_sample_t*)ei_malloc(n_samples * sizeof(microphone_sample_t));
    if(inference.buffers[0] == nullptr) {
        LOG_ERR("Can't allocate audio buffer[0]");
        return false;
    }

    inference.buffers[1] = (microphone_sample_t*)ei_malloc(n_samples * sizeof(microphone_sample_t));
    if(inference.buffers[1] == nullptr) {
        LOG_ERR("Can't allocate audio buffer[1]");
        ei_free(inference.buffers[1]);
        return false;
    }

    inference.buf_select = 0;
    inference.buf_count  = 0;
    inference.n_samples  = n_samples;
    inference.buf_ready  = 0;
    k_mutex_unlock(&inference_mutex);

	struct pcm_stream_cfg stream = {
		.pcm_width = SAMPLE_BIT_WIDTH,
		.mem_slab  = &rx_mem_slab,
	};

	struct dmic_cfg cfg = {
		.io = {
			/* These fields can be used to limit the PDM clock
			 * configurations that the driver is allowed to use
			 * to those supported by the microphone.
			 */
			.min_pdm_clk_freq = 1000000,
			.max_pdm_clk_freq = 3500000,
			.min_pdm_clk_dc   = 40,
			.max_pdm_clk_dc   = 60,
		},
		.streams = &stream,
		.channel = {
			.req_num_streams = 1,
		},
	};

	cfg.channel.req_num_chan = 1;
	cfg.channel.req_chan_map_lo = dmic_build_channel_map(0, 0, PDM_CHAN_RIGHT);
	cfg.streams[0].pcm_rate = AUDIO_FREQ;
	cfg.streams[0].block_size = BLOCK_SIZE(cfg.streams[0].pcm_rate, cfg.channel.req_num_chan);

	ret = dmic_configure(mic_dev, &cfg);
	if (ret) {
		LOG_ERR("DMIC configure error (%d)", ret);
        ei_free(inference.buffers[0]);
        ei_free(inference.buffers[1]);
        return false;
	}

    ret = dmic_trigger(mic_dev, DMIC_TRIGGER_START);
    if (ret < 0) {
        LOG_ERR("START trigger failed: %d", ret);
        ei_free(inference.buffers[0]);
        ei_free(inference.buffers[1]);
        return false;
    }

    k_timer_start(&inference_sampling_timer, K_MSEC(BLOCK_LENGTH_MS), K_MSEC(BLOCK_LENGTH_MS));

    return true;
}

bool ei_microphone_inference_end(void)
{
    int ret;

    k_timer_stop(&inference_sampling_timer);

    ret = dmic_trigger(mic_dev, DMIC_TRIGGER_STOP);
	if (ret < 0) {
		LOG_ERR("STOP trigger failed: %d", ret);
		return false;
	}

    k_mutex_lock(&inference_mutex, K_FOREVER);
    ei_free(inference.buffers[0]);
    ei_free(inference.buffers[1]);
    k_mutex_unlock(&inference_mutex);

    return true;
}
